--- a/MyWebApp/WebApp.Master
+++ b/MyWebApp/WebApp.Master
@@ -15,6 +15,9 @@
   <link rel="manifest" href="/manifest.json" />
   <link rel="icon" href="/source/favicon.ico" />
 
+<script src="lib/jquery/dist/jquery.min.js"></script>
+<script src="lib/js/bootstrap.min.js"></script>
+
 
   <!-- Bootstrap core CSS -->
   <link href="~/lib/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +32,7 @@
 </head>
 
 <body>
-    <form id="form1" runat="server" style="background-color:#343a40;" defaultbutton="" >
+    <form id="form1" runat="server" style="background-color:#343a40;"  >
 
     <div class="d-flex" id="wrapper">
 
@@ -52,28 +55,23 @@
             <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
                 <button class="btn btn-primary" id="menu-toggle" style="margin-left: 10px;">Toggle Menu</button>
 
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent" style="padding-left:10px;">
-                    <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+
+                    <ul class="navbar-nav ml-auto mt-2 mt-lg-0" >
+                        <li class="nav-item form-group" >
+                           <input id="inputUser" type="text" runat="server" class="form-control" style="height:38px;"/>
+                                 <label for="inputUser" class="">Enter Username</label>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                        <li class="nav-item form-group" >
+                            <input id="inputPass" type="password" runat="server" class="form-control" style="height:38px;"/>
+                                 <label for="inputPass" class="">Enter Password</label>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Dropdown
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
+                        <li class="nav-item form-group" style="height:38px;">
+                            <asp:Button ID="btnLogin" CssClass="btn btn-primary" runat="server" Text="Login" OnClick="btnLogin_Click" />
                         </li>
                     </ul>
                 </div>
@@ -89,16 +87,16 @@
     </div>
     <!-- /#wrapper -->
     <!-- Bootstrap core JavaScript -->
-    <script src="lib/jquery/dist/jquery.min.js"></script>
-    <script src="lib/js/bootstrap.bundle.min.js"></script>
-
+   
     <!-- Menu Toggle Script -->
     <script>
         $("#menu-toggle").click(function (e) {
             e.preventDefault();
             $("#wrapper").toggleClass("toggled");
         });
+
     </script>
+       
     </form>
 </body>
 
