--- a/MyWebApp/lib/css/site.css
+++ b/MyWebApp/lib/css/site.css
@@ -126,3 +126,11 @@ body {
             font-size: 18px;
         }
 }
+
+.bluebtn {
+    margin:5px 0px 5px 0px;
+    width:100%;
+    vertical-align:middle; 
+    font-size:20px;
+    border-radius:5px;
+}
